# Neural-Network

./: README.md  pyproject.toml
conf/: main.yaml
conf/data/: base.yaml
conf/exp/: base.yaml
conf/model/: net.yaml
conf/model/params/: net.yaml
dataset/: dataset.py
experiment/: experiment.py  utils.py
model/: __init__.py  get_model.py  model.py
