[tool.poetry]
name = "neural-network"
version = "0.1.0"
description = ""
authors = ["LeonTanemura <leontanemura@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.4.0"
hydra-core = "^1.3.2"
numpy = "^2.1.0"
pandas = "^2.2.2"
torchvision = "^0.19.0"
scikit-learn = "^1.5.1"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
